feat: snowflake component

--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/snowflake/snowflake.component.html
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/snowflake/snowflake.component.html
@@ -1,1 +1,42 @@
-<p>snowflake works!</p>
+<div class="snowflake-container">
+  <div class="snowflake-resize">
+    <div class="snowflake">
+      <div class="side side-1">
+        <div class="side-l-1"></div>
+        <div class="side-r-1"></div>
+        <div class="side-l-2"></div>
+        <div class="side-r-2"></div>
+      </div>
+      <div class="side side-2">
+        <div class="side-l-1"></div>
+        <div class="side-r-1"></div>
+        <div class="side-l-2"></div>
+        <div class="side-r-2"></div>
+      </div>
+      <div class="side side-3">
+        <div class="side-l-1"></div>
+        <div class="side-r-1"></div>
+        <div class="side-l-2"></div>
+        <div class="side-r-2"></div>
+      </div>
+      <div class="side side-4">
+        <div class="side-l-1"></div>
+        <div class="side-r-1"></div>
+        <div class="side-l-2"></div>
+        <div class="side-r-2"></div>
+      </div>
+      <div class="side side-5">
+        <div class="side-l-1"></div>
+        <div class="side-r-1"></div>
+        <div class="side-l-2"></div>
+        <div class="side-r-2"></div>
+      </div>
+      <div class="side side-6">
+        <div class="side-l-1"></div>
+        <div class="side-r-1"></div>
+        <div class="side-l-2"></div>
+        <div class="side-r-2"></div>
+      </div>
+    </div>
+  </div>
+</div>
