--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/stocking/stocking.component.html
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/stocking/stocking.component.html
@@ -1,1 +1,12 @@
-<p>stocking works!</p>
+<div class="stocking-container">
+  <div class="stocking">
+    <div class="stocking-hanger"></div>
+    <div class="stocking-wool"></div>
+    <div class="stocking-leg">
+      <div class="stocking-heel"></div>
+    </div>
+    <div class="stocking-foot">
+      <div class="stocking-heel"></div>
+    </div>
+  </div>
+</div>
