feat: candy cane

--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/candycane/candycane.component.html
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/candycane/candycane.component.html
@@ -1,1 +1,6 @@
-<p>candycane works!</p>
+<div class="candycane-container">
+  <div class="candycane">
+    <div class="candycane__end candycane__end--top"></div>
+    <div class="candycane__end candycane__end--bottom"></div>
+  </div>
+</div>
