--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/snowman/snowman.component.html
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/snowman/snowman.component.html
@@ -1,1 +1,21 @@
-<p>snowman works!</p>
+<div class="snowman-container">
+  <div class="snowman">
+    <div class="snowman__leg">O</div>
+    <div class="snowman__stomach">O</div>
+    <div class="snowman__head">O</div>
+    <div class="snowman__button snowman__button-1">G</div>
+    <div class="snowman__button snowman__button-2">{{'@'}}</div>
+    <div class="snowman__button snowman__button-3">6</div>
+    <div class="snowman__button snowman__button-4">D</div>
+    <div class="snowman__nose">V</div>
+    <div class="snowman__left-eye">*</div>
+    <div class="snowman__right-eye">#</div>
+    <div class="snowman__left-arm">Y</div>
+    <div class="snowman__right-arm">F</div>
+    <div class="snowman__hat">
+      <div class="snowman__hat--base">M</div>
+      <div class="snowman__hat--left">L</div>
+      <div class="snowman__hat--right">J</div>
+    </div>
+  </div>
+</div>
