feat: christmas lights

--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/christmas-lights/christmas-lights.component.html
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/christmas-lights/christmas-lights.component.html
@@ -1,1 +1,20 @@
-<p>christmas-lights works!</p>
+<div class="christmas-lights-container">
+  <div class="christmas-lights">
+    <div class="chord"></div>
+    <div class="bulb bulb-1">
+      <div class="light"></div>
+    </div>
+    <div class="bulb bulb-2">
+      <div class="light"></div>
+    </div>
+    <div class="bulb bulb-3">
+      <div class="light"></div>
+    </div>
+    <div class="bulb bulb-4">
+      <div class="light"></div>
+    </div>
+    <div class="bulb bulb-5">
+      <div class="light"></div>
+    </div>
+  </div>
+</div>
