--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/ornaments/ornaments.component.html
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/ornaments/ornaments.component.html
@@ -1,1 +1,23 @@
-<p>ornaments works!</p>
+<div class="ornaments-container">
+  <div class="ornaments">
+    <div class="branch branch-1">
+      <div class="spikes-upper"></div>
+      <div class="spikes-lower"></div>
+      <div class="spikes-end"></div>
+    </div>
+    <div class="branch branch-2">
+      <div class="spikes-upper"></div>
+      <div class="spikes-lower"></div>
+      <div class="spikes-end"></div>
+    </div>
+    <div class="ornament ornament-1">⭐
+      <div class="hanger"></div>
+    </div>
+    <div class="ornament ornament-2">❄️
+      <div class="hanger"></div>
+    </div>
+    <div class="ornament ornament-3">💜
+      <div class="hanger"></div>
+    </div>
+  </div>
+</div>
