--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/skate/skate.component.html
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/skate/skate.component.html
@@ -1,1 +1,16 @@
-<p>skate works!</p>
+<div class="skate-container">
+  <div class="skate">
+    <div class="skate-blade">
+      <div class="skate-blade-holder-left"></div>
+      <div class="skate-blade-holder-right"></div>
+    </div>
+    <div class="skate-boot-bottom"></div>
+    <div class="skate-boot-back"></div>
+    <div class="skate-boot-front"></div>
+    <div class="skate-boot-main"></div>
+    <div class="skate-boot-main-bottom"></div>
+    <div class="skate-tie skate-tie--1"></div>
+    <div class="skate-tie skate-tie--2"></div>
+    <div class="skate-tie skate-tie--3"></div>
+  </div>
+</div>
