--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/shooting-star/shooting-star.component.html
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/shooting-star/shooting-star.component.html
@@ -1,1 +1,6 @@
-<p>shooting-star works!</p>
+<div class="shooting-star-container">
+  <div class="shooting-star">
+    <div class="shooting-star__tail"><span></span><span></span><span></span></div>
+    <div class="shooting-star__star"><span></span><span></span><span></span><span></span><span></span></div>
+  </div>
+</div>
