--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/sparkler/sparkler.component.html
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/sparkler/sparkler.component.html
@@ -1,1 +1,44 @@
-<p>sparkler works!</p>
+<div class="sparkler-container">
+  <div class="sparkler">
+    <div class="stick"></div>
+    <div class="gun-powder"></div>
+    <div class="sparkler-light">
+      <div class="spark spark-1" style="--spark-rotate: 10deg; --spark-delay: 850ms"></div>
+      <div class="spark spark-2" style="--spark-rotate: 20deg; --spark-delay: 864ms"></div>
+      <div class="spark spark-3" style="--spark-rotate: 30deg; --spark-delay: 525ms"></div>
+      <div class="spark spark-4" style="--spark-rotate: 40deg; --spark-delay: 784ms"></div>
+      <div class="spark spark-5" style="--spark-rotate: 50deg; --spark-delay: 460ms"></div>
+      <div class="spark spark-6" style="--spark-rotate: 60deg; --spark-delay: 206ms"></div>
+      <div class="spark spark-7" style="--spark-rotate: 70deg; --spark-delay: 794ms"></div>
+      <div class="spark spark-8" style="--spark-rotate: 80deg; --spark-delay: 270ms"></div>
+      <div class="spark spark-9" style="--spark-rotate: 90deg; --spark-delay: 299ms"></div>
+      <div class="spark spark-10" style="--spark-rotate: 100deg; --spark-delay: 548ms"></div>
+      <div class="spark spark-11" style="--spark-rotate: 110deg; --spark-delay: 819ms"></div>
+      <div class="spark spark-12" style="--spark-rotate: 120deg; --spark-delay: 849ms"></div>
+      <div class="spark spark-13" style="--spark-rotate: 130deg; --spark-delay: 219ms"></div>
+      <div class="spark spark-14" style="--spark-rotate: 140deg; --spark-delay: 176ms"></div>
+      <div class="spark spark-15" style="--spark-rotate: 150deg; --spark-delay: 497ms"></div>
+      <div class="spark spark-16" style="--spark-rotate: 160deg; --spark-delay: 872ms"></div>
+      <div class="spark spark-17" style="--spark-rotate: 170deg; --spark-delay: 836ms"></div>
+      <div class="spark spark-18" style="--spark-rotate: 180deg; --spark-delay: 623ms"></div>
+      <div class="spark spark-19" style="--spark-rotate: 190deg; --spark-delay: 301ms"></div>
+      <div class="spark spark-20" style="--spark-rotate: 200deg; --spark-delay: 767ms"></div>
+      <div class="spark spark-21" style="--spark-rotate: 210deg; --spark-delay: 18ms"></div>
+      <div class="spark spark-22" style="--spark-rotate: 220deg; --spark-delay: 617ms"></div>
+      <div class="spark spark-23" style="--spark-rotate: 230deg; --spark-delay: 831ms"></div>
+      <div class="spark spark-24" style="--spark-rotate: 240deg; --spark-delay: 578ms"></div>
+      <div class="spark spark-25" style="--spark-rotate: 250deg; --spark-delay: 712ms"></div>
+      <div class="spark spark-26" style="--spark-rotate: 260deg; --spark-delay: 924ms"></div>
+      <div class="spark spark-27" style="--spark-rotate: 270deg; --spark-delay: 361ms"></div>
+      <div class="spark spark-28" style="--spark-rotate: 280deg; --spark-delay: 302ms"></div>
+      <div class="spark spark-29" style="--spark-rotate: 290deg; --spark-delay: 93ms"></div>
+      <div class="spark spark-30" style="--spark-rotate: 300deg; --spark-delay: 274ms"></div>
+      <div class="spark spark-31" style="--spark-rotate: 310deg; --spark-delay: 587ms"></div>
+      <div class="spark spark-32" style="--spark-rotate: 320deg; --spark-delay: 666ms"></div>
+      <div class="spark spark-33" style="--spark-rotate: 330deg; --spark-delay: 184ms"></div>
+      <div class="spark spark-34" style="--spark-rotate: 340deg; --spark-delay: 370ms"></div>
+      <div class="spark spark-35" style="--spark-rotate: 350deg; --spark-delay: 634ms"></div>
+      <div class="spark spark-36" style="--spark-rotate: 360deg; --spark-delay: 247ms"></div>
+    </div>
+  </div>
+</div>
