--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/toy-train/toy-train.component.html
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/toy-train/toy-train.component.html
@@ -1,1 +1,36 @@
-<p>toy-train works!</p>
+<div class="toy-train-container">
+  <div class="toy-train">
+    <div class="locomotive">
+      <div class="chimney">
+        <div class="smoke"></div>
+        <div class="smoke"></div>
+        <div class="smoke"></div>
+      </div>
+      <div class="boiler"></div>
+      <div class="front"></div>
+      <div class="snow-breaker"></div>
+      <div class="car-cabin">
+        <div class="window"></div>
+      </div>
+      <div class="side-bar"></div>
+      <div class="car-bottom">
+        <div class="wheel"></div>
+        <div class="wheel"></div>
+        <div class="bumper bumper--back"></div>
+      </div>
+    </div>
+    <div class="passanger-car">
+      <div class="car-cabin">
+        <div class="window"></div>
+        <div class="window"></div>
+      </div>
+      <div class="side-bar"></div>
+      <div class="car-bottom">
+        <div class="wheel"></div>
+        <div class="wheel"></div>
+        <div class="bumper bumper--back"></div>
+        <div class="bumper bumper--front"></div>
+      </div>
+    </div>
+  </div>
+</div>
