--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/calendar-grid.component.html
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/calendar-grid.component.html
@@ -16,7 +16,7 @@
       <div class="inside">
         <ng-template [appCalendarCardFactory] [type]="day"></ng-template>
       </div>
-      <div class="title-container"><a href="https://codepen.io/johnnyfekete/pen/ZEpGerj" target="_blank" title="Link to source code">Gingerbread cookie</a>
+      <div class="title-container"><a href="https://codepen.io/johnnyfekete/pen/ZEpGerj" target="_blank" title="Link to source code">TODO</a>
       </div>
     </label>
   </div>
