feat: add comments with credits

--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/candle/candle.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/candle/candle.component.css
@@ -1,3 +1,7 @@
+/**
+ * Day 7 - candle with a flame
+ * https://codepen.io/johnnyfekete/pen/ExgyPrb
+ */
 .candle-container {
   display: flex;
   align-items: center;
