--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/candycane/candycane.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/candycane/candycane.component.css
@@ -1,3 +1,7 @@
+/**
+ * Day 8 - candycane
+ * https://codepen.io/johnnyfekete/pen/KKgMLym
+ */
 .candycane-container {
   --candycane-background: #1a535c;
   --candycane-red: #ff0054;
