--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/christmas-lights/christmas-lights.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/christmas-lights/christmas-lights.component.css
@@ -1,3 +1,7 @@
+/**
+ * Day 11 - flickering Christmas lights
+ * https://codepen.io/johnnyfekete/pen/NWRdKjQ
+ */
 .christmas-lights-container {
   display: flex;
   align-items: flex-start;
