--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/christmas-tree/christmas-tree.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/christmas-tree/christmas-tree.component.css
@@ -1,3 +1,7 @@
+/**
+ * Day 24 - 3D CSS Christmas tree
+ * https://codepen.io/johnnyfekete/pen/YzGEMKx
+ */
 .christmas-tree-wrapper {
   display: flex;
   align-items: center;
