--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/elf-hat/elf-hat.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/elf-hat/elf-hat.component.css
@@ -1,3 +1,7 @@
+/**
+ * Day 13 - elf hat
+ * https://codepen.io/johnnyfekete/pen/JjREvyo
+ */
 .elf-hat-container {
   --elf-hat-background: #333533;
   --elf-hat-red: #bf0603;
