--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/gift-box/gift-box.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/gift-box/gift-box.component.css
@@ -1,3 +1,7 @@
+/**
+ * Day 4 - Animated 3D gift box
+ * https://codepen.io/johnnyfekete/pen/NWRxmwG
+ */
 .gift-box-day {
   background: linear-gradient(
     200deg,
