--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/gingerbread-man-card/gingerbread-man-card.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/gingerbread-man-card/gingerbread-man-card.component.css
@@ -1,3 +1,7 @@
+/**
+ * Day 1 - Gingerbread man
+ * https://codepen.io/johnnyfekete/pen/ZEpGerj
+ */
 .gingerbread-man-container {
   display: flex;
   align-items: center;
