--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/hot-chocolate/hot-chocolate.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/hot-chocolate/hot-chocolate.component.css
@@ -1,3 +1,7 @@
+/**
+ * Day 9 - hot chocolate with marshmallows
+ * https://codepen.io/johnnyfekete/pen/VwKKMKE
+ */
 .hot-chocolate-container {
   background-color: #aa78a6;
   display: flex;
