--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/north-pole/north-pole.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/north-pole/north-pole.component.css
@@ -1,3 +1,7 @@
+/** 
+ * Day 15 - North Pole sign
+ * https://codepen.io/johnnyfekete/pen/MWjmwBY
+ */
 .north-pole-container {
   display: flex;
   align-items: center;
