--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/ornaments/ornaments.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/ornaments/ornaments.component.css
@@ -1,3 +1,7 @@
+/**
+ * Day 14 - Christmas tree branch with ornaments
+ * https://codepen.io/johnnyfekete/pen/qBarZVj
+ */
 .ornaments-container {
   display: flex;
   align-items: center;
