--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/polar-bear/polar-bear.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/polar-bear/polar-bear.component.css
@@ -1,3 +1,7 @@
+/**
+ * Day 12 - polar bear
+ * https://codepen.io/johnnyfekete/pen/qBaRZXV
+ */
 .polar-bear-container {
   display: flex;
   align-items: center;
