--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/pom-hat/pom-hat.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/pom-hat/pom-hat.component.css
@@ -1,3 +1,7 @@
+/**
+ * Day 20 - pom hat with a single div
+ * https://codepen.io/johnnyfekete/pen/KKgvrJK
+ */
 .pom-hat-container {
   display: flex;
   align-items: center;
