--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/reindeer/reindeer.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/reindeer/reindeer.component.css
@@ -1,3 +1,7 @@
+/**
+ * Day 23 - Rudolph, the red nosed reindeer
+ * https://codepen.io/johnnyfekete/pen/xxEPYGj
+ */
 .reindeer-container {
   display: flex;
   align-items: center;
