--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/shooting-star/shooting-star.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/shooting-star/shooting-star.component.css
@@ -1,3 +1,7 @@
+/**
+ * Day 17 - shooting start
+ * https://codepen.io/johnnyfekete/pen/vYXZPJj
+ */
 .shooting-star-container {
   display: flex;
   align-items: center;
