--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/skate/skate.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/skate/skate.component.css
@@ -1,3 +1,7 @@
+/**
+ * Day 16 - ice skate
+ * https://codepen.io/johnnyfekete/pen/MWjoPBR
+ */
 .skate-container {
   display: flex;
   align-items: center;
