--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/snowflake/snowflake.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/snowflake/snowflake.component.css
@@ -1,3 +1,7 @@
+/**
+ * Day 2 - Snowflake
+ * https://codepen.io/johnnyfekete/pen/ExgVmaJ
+ */
 .snowflake-container {
   display: flex;
   width: 100%;
