--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/snowman/snowman.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/snowman/snowman.component.css
@@ -1,3 +1,7 @@
+/**
+ * Day 10 - snowman made of letters and characters
+ * https://codepen.io/johnnyfekete/pen/OJRbWJM
+ */
 .snowman-container {
   display: flex;
   align-items: center;
