--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/stocking/stocking.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/stocking/stocking.component.css
@@ -1,3 +1,7 @@
+/**
+ * Day 3 - Stocking
+ * https://codepen.io/johnnyfekete/pen/BaLjoaV
+ */
 .stocking-container {
   --stocking-background: #b2b09b;
   --stocking-red: #a93f55;
