--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/toy-train/toy-train.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/toy-train/toy-train.component.css
@@ -1,3 +1,8 @@
+/**
+ * Day 21 - toy train
+ * https://codepen.io/johnnyfekete/pen/jOMGMJy
+ */
+
 .toy-train-container {
   display: flex;
   align-items: center;
