--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/drum/drum.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/drum/drum.component.css
@@ -1,3 +1,7 @@
+/**
+ * Day 18 - animated drum
+ * https://codepen.io/johnnyfekete/pen/xxErNmw
+ */
 .drum-container {
   display: flex;
   align-items: center;
