--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/santa/santa.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/santa/santa.component.css
@@ -1,3 +1,7 @@
+/**
+ * Day 6 - Santa
+ * https://codepen.io/johnnyfekete/pen/oNzxMPW
+ */
 .santa-container {
   display: flex;
   background: repeating-linear-gradient(
