--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/sparkler/sparkler.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid/cards/sparkler/sparkler.component.css
@@ -1,3 +1,7 @@
+/**
+ * Day 19 - animated Christmas sparkler
+ * https://codepen.io/johnnyfekete/pen/MWjveNj
+ */
 .sparkler-container {
   display: flex;
   align-items: center;
