--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
   font-family: "Mountains of Christmas", cursive;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 /* calendar layout */
@@ -8086,4 +8087,106 @@ footer a {
     transform: scale(1.1);
     opacity: 0.15;
   }
+}
+
+.no-js {
+  visibility: hidden
+}
+
+.snow {
+  z-index: -1;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  overflow: hidden
+}
+
+.snow .snowflaky {
+  opacity: .4;
+  pointer-events: none;
+  will-change: transform,opacity;
+  border-radius: 50%;
+  max-width: 8px;
+  max-height: 8px;
+  -webkit-animation-name: snow;
+  animation-name: snow;
+  -webkit-animation-duration: 20s;
+  animation-duration: 20s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  position: absolute;
+  -webkit-transform: translateY(-10px);
+  transform: translateY(-10px)
+}
+
+.snow .snowflaky.c1 {
+  background-color: rgba(255,255,255,.9)
+}
+
+.snow .snowflaky.c2 {
+  background-color: #d6ffff;
+  -webkit-animation-duration: 18s;
+  animation-duration: 18s
+}
+
+.snow .snowflaky.c3 {
+  background-color: #fff;
+  -webkit-animation-duration: 22s;
+  animation-duration: 22s
+}
+
+@-webkit-keyframes snow {
+  15%,95% {
+      opacity: 1;
+      left: var(--drift)
+  }
+
+  to {
+      opacity: .8;
+      -webkit-transform: translateY(110vh);
+      transform: translateY(110vh)
+  }
+}
+
+@keyframes snow {
+  15%,95% {
+      opacity: 1;
+      left: var(--drift)
+  }
+
+  to {
+      opacity: .8;
+      -webkit-transform: translateY(110vh);
+      transform: translateY(110vh)
+  }
+}
+
+.button {
+    text-align: center;
+    cursor: pointer;
+    color: hsl(185,100%,98%);
+    border: 2px solid transparent;
+    border-radius: .5rem;
+    justify-content: center;
+    align-self: start;
+    align-items: center;
+    min-height: 44px;
+    margin: 0;
+    padding: .25em 1em;
+    font-size: 1.125rem;
+    line-height: 1;
+    text-decoration: none;
+    display: inline-flex
+}
+
+.button--action {
+  align-self: end;
+  color: hsl(220,70%,35%);
+  border: 1px solid
+}
+
+.button--action[aria-pressed=true] {
+  box-shadow: inset 0 0 .5em .25em hsl(220,70%,35%,.5)
 }
