--- a/ng-christmas-calendar/src/styles.css
+++ b/ng-christmas-calendar/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-:host {
+:root {
   --bright-blue: oklch(51.01% 0.274 263.83);
   --electric-violet: oklch(53.18% 0.28 296.97);
   --french-violet: oklch(47.66% 0.246 305.88);
@@ -24,8 +24,6 @@
     var(--vivid-pink) 50%,
     var(--electric-violet) 100%
   );
-
-  --pill-accent: var(--bright-blue);
 
   font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
