--- a/ng-christmas-calendar/src/app/feature/calendar/dialogs/card-details-dialog/card-details-dialog.component.html
+++ b/ng-christmas-calendar/src/app/feature/calendar/dialogs/card-details-dialog/card-details-dialog.component.html
@@ -1,1 +1,22 @@
-<p>card-details-dialog works!</p>
+<div class="xmas-dialog">
+  <header class="xmas-dialog-header">
+    <img [src]="data.content?.author?.avatarUrl" alt="{{data.content?.author}} thoughts about Angular in 2023!">
+
+    <div class="xmas-dialog-header-details">
+      <h2>{{data.content?.author?.name}}</h2>
+
+      @if (data.content?.author && data.content?.author?.twitterHandle) {
+        <a [href]="data.content?.author?.twitterHandle! | twitterUrl">{{ "@" + data.content?.author?.twitterHandle }}</a>
+      }
+    </div>
+  </header>
+  <div class="xmas-dialog-content">
+    @if (data.content?.videoSrc) {
+      <p>Todo video</p>
+    } @else if (data.content?.descriptionHtml) {
+      <div [innerHTML]="data.content?.descriptionHtml"></div>
+    } @else {
+      <p>No content provided</p>
+    }
+  </div>
+</div>
