--- a/ng-christmas-calendar/src/app/feature/calendar/dialogs/card-details-dialog/card-details-dialog.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/dialogs/card-details-dialog/card-details-dialog.component.css
@@ -1,16 +1,26 @@
 .xmas-dialog {
   width: 75vw;
-  height: 80vh;
   background-color: var(--white);
   padding: 1rem;
   position: relative;
   display: flex;
   flex-direction: column;
+  gap: 2rem;
 }
 
 .xmas-dialog-header {
   display: flex;
-  gap: 2.5rem;
+  gap: 1rem;
+  justify-content: space-evenly;
+}
+
+.xmas-dialog-header h1,
+.xmas-dialog-header a {
+  background-image: var(--red-to-pink-to-purple-horizontal-gradient);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  font-size: 1.75rem;
 }
 
 .xmas-dialog-header-details {
@@ -19,9 +29,22 @@
   justify-content: center;
 }
 
-img {
+.xmas-dialog-header img {
+  height: 4rem;
+  border-radius: 50%;
+}
+
+.xmas-dialog-header-card-wrapper {
+  border-radius: 0.5rem;
+  display: none;
+  justify-content: flex-end;
+}
+
+.xmas-dialog-header-card-wrapper > .xmas-dialog-header-card {
+  width: 8rem;
   height: 8rem;
   border-radius: 50%;
+  overflow: auto;
 }
 
 @media only screen and (min-width: 576px) {
@@ -30,9 +53,24 @@ img {
     max-width: 700px;
     height: unset;
   }
+
+  .xmas-dialog-header-card-wrapper {
+    display: flex;
+  }
+
+  .xmas-dialog-header img {
+    height: 8rem;
+  }
+
+  .xmas-dialog-header h1,
+  .xmas-dialog-header a {
+    font-size: 2.5rem;
+  }
 }
 
 .xmas-dialog-content {
+  display: flex;
+  justify-content: center;
   overflow-y: auto;
 }
 
