--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid.component.css
@@ -70,6 +70,7 @@
 }
 
 .day {
+  font-family: "Mountains of Christmas", cursive;
   transform: translate3d(0px, 0px, 0px);
   position: relative;
   background: #0000001c;
