--- a/ng-christmas-calendar/src/app/feature/calendar/dialogs/card-details-dialog/card-details-dialog.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/dialogs/card-details-dialog/card-details-dialog.component.css
@@ -69,6 +69,9 @@
 }
 
 .xmas-dialog-content {
+  font-size: 0.875rem;
+  font-family: 'Inter Tight', sans-serif;
+  color: var(--gray-700);
   display: flex;
   justify-content: center;
   overflow-y: auto;
