--- a/ng-christmas-calendar/src/app/feature/calendar/calendar-grid.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/calendar-grid.component.css
@@ -101,14 +101,12 @@ label {
   width: 100%;
   transform-style: preserve-3d;
   transition: all 300ms;
-  border: 2px dashed rgba(0, 0, 0, 0.2);
   border-radius: 0.6rem;
   transform-origin: 0% 50%;
 }
 
 .door--can-reveal {
   background: var(--red-to-pink-to-purple-horizontal-gradient);
-  border: none;
 }
 
 .door div {
@@ -132,14 +130,16 @@ label {
   transform: rotateY(-180deg);
 }
 
+.door .front {
+  backdrop-filter: blur(2px);
+}
+
 label:hover .door {
   border-color: #10303c;
 }
 
 :checked + .door {
   transform: rotateY(-180deg);
-  border-color: #10303c;
-  border-style: solid;
 }
 
 .title-container {
