--- a/ng-christmas-calendar/src/app/feature/calendar/cards/north-pole/north-pole.component.html
+++ b/ng-christmas-calendar/src/app/feature/calendar/cards/north-pole/north-pole.component.html
@@ -3,7 +3,7 @@
     <div class="ground"></div>
     <div class="pole"></div>
     <div class="sign">
-      <span>North Pole</span>
+      North Pole
       <div class="icicle icicle-1"></div>
       <div class="icicle icicle-2"></div>
       <div class="icicle icicle-3"></div>
