feat: 🚀adjust dialog content height, and style scrollbars

--- a/ng-christmas-calendar/src/app/feature/calendar/dialogs/card-details-dialog/card-details-dialog.component.html
+++ b/ng-christmas-calendar/src/app/feature/calendar/dialogs/card-details-dialog/card-details-dialog.component.html
@@ -28,4 +28,8 @@
       <p>No content provided</p>
     }
   </div>
+
+  <footer class="xmas-dialog-actions">
+    <button type="button" (click)="closeDialog()" class="button">Close</button>
+  </footer>
 </div>
