--- a/ng-christmas-calendar/src/styles.css
+++ b/ng-christmas-calendar/src/styles.css
@@ -34,6 +34,19 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(45deg, #ff3366, #33ccff);
+  border-radius: 5px;
+}
+
 body {
   background: url(https://i.ibb.co/4SPwtVN/pexels-photo-1303094.png) no-repeat
     top center #8ac1d6;
