--- a/ng-christmas-calendar/src/app/feature/calendar/dialogs/card-details-dialog/card-details-dialog.component.css
+++ b/ng-christmas-calendar/src/app/feature/calendar/dialogs/card-details-dialog/card-details-dialog.component.css
@@ -79,6 +79,11 @@
   overflow-y: auto;
   scroll-behavior: smooth;
   max-height: calc(100vh - 350px);
+
+  & > div p {
+    font-size: 1rem;
+    line-height: 1.4;
+  }
 }
 
 .xmas-dialog-content::before {
