--- a/src/app/feature/calendar/cards/ornaments/ornaments.component.html
+++ b/src/app/feature/calendar/cards/ornaments/ornaments.component.html
@@ -10,13 +10,16 @@
       <div class="spikes-lower"></div>
       <div class="spikes-end"></div>
     </div>
-    <div class="ornament ornament-1">⭐
+    <div class="ornament ornament-1">
+      ⭐
       <div class="hanger"></div>
     </div>
-    <div class="ornament ornament-2">❄️
+    <div class="ornament ornament-2">
+      ❄️
       <div class="hanger"></div>
     </div>
-    <div class="ornament ornament-3">💜
+    <div class="ornament ornament-3">
+      💜
       <div class="hanger"></div>
     </div>
   </div>
