--- a/src/app/feature/calendar/dialogs/card-details-dialog/card-details-dialog.component.html
+++ b/src/app/feature/calendar/dialogs/card-details-dialog/card-details-dialog.component.html
@@ -1,12 +1,17 @@
 <div class="xmas-dialog">
   <header class="xmas-dialog-header">
-    <img [src]="data.content?.author?.avatarUrl" alt="{{data.content?.author}} thoughts about Angular in 2023!">
+    <img
+      [src]="data.content?.author?.avatarUrl"
+      alt="{{ data.content?.author }} thoughts about Angular in 2023!"
+    />
 
     <div class="xmas-dialog-header-details">
       @if (data.content?.author && data.content?.author?.twitterHandle) {
-        <a [href]="data.content?.author?.twitterHandle! | twitterUrl">{{data.content?.author?.name}}</a>
+        <a [href]="data.content?.author?.twitterHandle! | twitterUrl">
+          {{ data.content?.author?.name }}
+        </a>
       } @else {
-        <h1>{{data.content?.author?.name}}</h1>
+        <h1>{{ data.content?.author?.name }}</h1>
       }
     </div>
 
@@ -19,7 +24,7 @@
   <div class="xmas-dialog-content">
     @if (data.content?.videoSrc) {
       <video width="640" height="360" controls>
-        <source [src]="data.content?.videoSrc" type="video/mp4">
+        <source [src]="data.content?.videoSrc" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
     } @else if (data.content?.descriptionHtml) {
